1.999812 Not Released

 * Fix rounding and accuracy in bpi(). Extra digits in intermediate computation
   were not used, causing the last digits to be inaccurate. In addition, the
   rounding was incorrect in some cases.

 * Remove statements used for debugging.

 * Correct more of the problems with rounding in the constructors. If rounding
   arguments are given as arguments to the constructor, the constructor should
   assign those values to the instance. If no rounding arguments are given, and
   the constructor is called as a class method, the class rounding variables
   should be assigned to the instance. Added test file
   t/author-constructors-a-p-r.t to replace t/author-constructors-a-p.t, but
   lots of tests are failing and (for now) commented out.

 * Fix typos.

 * Fix case when both accuracy and precision are set, resulting in a NaN. This
   closes CPAN RT #124790.

 * Cleaner log/exp-related code in Math::BigFloat.

 * Remove unused variables.

 * Add test file t/release-portability.t.

 * Add test file t/release-whitespaces.t.

 * Update the documentation of configuration parameters.

 * Convert t/03podcov.t -> t/release-pod-coverage.t.

 * Convert t/02pod.t -> t/release-pod.t.

 * Reformat CHANGES to match the specification in CPAN::Changes::Spec and
   CPAN::Meta::Spec.

 * Expand tabs to spaces and clean up whitepace.

 * Include tests that were previously commented out.

 * Use config() as a method, rather than a function. Also use config("xyz")
   rather than config()->{xyz}.

 * Use $LIB as the variable name for backend math library.

 * Import "carp" and "croak" from the Carp module.

 * Math::BigInt isa Exporter, so Math::BigInt should require Exporter.
   Math::BigFloat has Math::BigInt in @ISA, so it doesn't need to require
   Exporter.

 * Fix CPAN RT #120351 regarding bpow(). Add test.

 * Don't load Test::More when it isn't really needed. This speeds up processing
   of author test files when they are skipped.
