@@ -1,5 +1,7 @@
 1.999812 Not Released
 
+ * Clearify documentation of rounding modes.
+
  * Fix rounding and accuracy in bpi(). Extra digits in intermediate computation
    were not used, causing the last digits to be inaccurate. In addition, the
    rounding was incorrect in some cases.
